--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&display=swap');
+*{
+  font-family: 'Roboto Slab', serif;
+}
 .uploadImage{
   font-size: 10px;
   background-color: gray;
-  width: 100px;
+  width: 140px;
   padding: 10px;
   text-align: center;
   border-radius: 10px;
   cursor: pointer;
   color: white;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  border: none;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2); 
+  margin-right: 20px;
+}
+.changerUploadImage{
+  margin-left: 45px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2); 
 }
