--- a/src/components/client/main.css
+++ b/src/components/client/main.css
@@ -9,7 +9,7 @@
     font-size: 2.25rem;
 }
 
-.blog-header-logo:hover {
+.blog-header-logo {
     text-decoration: none;
 }
 
@@ -133,4 +133,8 @@ h6 {
     text-align: center;
     white-space: nowrap;
     -webkit-overflow-scrolling: touch;
+}
+
+.news-categories{
+    text-decoration: none;
 }
