--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,6 @@
   margin-left: 45px;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2); 
 }
-
-
-
-/* 
-@media only screen and (min-width: 768px){
-  .categories-container {max-width: 540px;}
-} */
+.content img{
+  max-width: 100%;
+}
