--- a/src/components/admin/Login/login.css
+++ b/src/components/admin/Login/login.css
@@ -11,11 +11,16 @@
     flex-direction: column;
     font-family: 'Montserrat', sans-serif;
     height: 100vh;
+    margin: -20px 0 50px;
 }
 
 .h1 {
     font-weight: bold;
     margin: 0;
+}
+
+.h2 {
+    text-align: center;
 }
 
 .p {
@@ -37,7 +42,7 @@
     margin: 15px 0;
 }
 
-.btn-login {
+.btn_login {
     border-radius: 20px;
     border: 1px solid rgb(12, 85, 141);
     background-color: rgb(12, 85, 141);
@@ -50,21 +55,20 @@
     transition: transform 80ms ease-in;
 }
 
-
-.btn-login:active {
+.btn_login:active {
     transform: scale(0.95);
 }
 
-.btn-login:focus {
+.btn_login:focus {
     outline: none;
 }
 
-.btn-login.ghost {
+button.ghost {
     background-color: transparent;
     border-color: #FFFFFF;
 }
 
-form {
+.form {
     background-color: #FFFFFF;
     display: flex;
     align-items: center;
@@ -75,7 +79,7 @@ form {
     text-align: center;
 }
 
-input {
+.input {
     background-color: #eee;
     border: none;
     padding: 12px 15px;
@@ -83,7 +87,7 @@ input {
     width: 100%;
 }
 
-.container {
+.container_login {
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
@@ -108,7 +112,7 @@ input {
     z-index: 2;
 }
 
-.container.right-panel-active .sign-in-container {
+.container_login.right-panel-active .sign-in-container {
     transform: translateX(100%);
 }
 
@@ -119,7 +123,7 @@ input {
     z-index: 1;
 }
 
-.container.right-panel-active .sign-up-container {
+.container_login.right-panel-active .sign-up-container {
     transform: translateX(100%);
     opacity: 1;
     z-index: 5;
@@ -152,7 +156,7 @@ input {
     z-index: 100;
 }
 
-.container.right-panel-active .overlay-container {
+.container_login.right-panel-active .overlay-container {
     transform: translateX(-100%);
 }
 
@@ -169,7 +173,7 @@ input {
     transition: transform 0.6s ease-in-out;
 }
 
-.container.right-panel-active .overlay {
+.container_login.right-panel-active .overlay {
     transform: translateX(50%);
 }
 
@@ -193,7 +197,7 @@ input {
     transform: translateX(-20%);
 }
 
-.container.right-panel-active .overlay-left {
+.container_login.right-panel-active .overlay-left {
     transform: translateX(0);
 }
 
@@ -203,22 +207,15 @@ input {
     transform: translateX(0);
 }
 
-.container.right-panel-active .overlay-right {
+.container_login.right-panel-active .overlay-right {
     transform: translateX(20%);
-}
-
-.social{
-    color: #333;
-        font-size: 14px;
-        text-decoration: none;
-        margin: 15px 0;
 }
 
 .social-container {
     margin: 20px 0;
 }
 
-.social-container a {
+.social-container .a {
     border: 1px solid #DDDDDD;
     border-radius: 50%;
     display: inline-flex;
@@ -227,4 +224,11 @@ input {
     margin: 0 5px;
     height: 40px;
     width: 40px;
+}
+
+.social{
+    color: #333;
+    font-size: 14px;
+    text-decoration: none;
+    margin: 15px 0;
 }
