--- a/src/index.css
+++ b/src/index.css
@@ -53,8 +53,6 @@
   width: 100%;
 }
 
-
-
 .blog-body {
   margin: 15rem 1rem 1rem 1rem;
 }
@@ -69,4 +67,41 @@
   line-height: 1.5rem;
   margin: 1rem 0 0.5rem;
 }
+
+.search {
+  /* width: 100%; */
+  position: relative;
+  display: flex;
+}
+
+.searchTerm {
+  border: 3px solid #C0C0C0;
+  border-right: none;
+  padding: 5px;
+  /* width: 200px; */
+  height: 40px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #2f2f2f;
+}
+
+.searchButton {
+  width: 35px;
+  height: 40px;
+  border: 1px solid #C0C0C0;
+  background: #C0C0C0;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/* .wrap {
+  width: 30%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+} */
 
